<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/from_latitude"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/from_latitude"
                android:text="@string/default_from_latitude"
                android:textSize="12sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/from_longitude"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/from_longitude"
                android:text="@string/default_from_longitude"
                android:textSize="12sp" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/to_latitude"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/to_latitude"
                android:text="@string/default_to_latitude"
                android:textSize="12sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/to_longitude"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/to_longitude"
                android:text="@string/default_to_longitude"
                android:textSize="12sp" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/speed"
            android:text="@string/default_speed_value"
            android:textSize="12sp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create" />

    <fragment xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.myapplication.map.MapActivity" />

</LinearLayout>